cmake_minimum_required(VERSION 3.28)
project(HelloCPP)

set(CMAKE_CXX_STANDARD 17)

add_executable(HelloCPP watermelon.cpp
        way_too_long_words.cpp
        teams.cpp
        bitplusplus.cpp
        next_round.cpp
        next_round.cpp
        domino_piling.cpp
        beatiful_matrix.cpp
        petya.cpp
        helpful_maths.cpp
        word_capitalization.cpp
        football.cpp
        intercepted_inputs.cpp
        twice.cpp
        superultra.cpp
        lead_game.cpp
        list_of_books.cpp
        longest_palindrome.cpp
        end_of_corruption.cpp
        voters_list.cpp
        reverse_punctuation.cpp
        zero_one_tiles.cpp
        meet_in_the_middle.cpp
        next_permutation.cpp
        prep_for_the_olympiad.cpp
        journey.cpp
        prep_for_the_exam.cpp
        best_price.cpp
)
